# 2D-game-editor

./: .flake8  .gitignore  README.md  issues.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
2D-game-editor/.github/workflows/: ci.yml
docs/: architecture.md
projects/: .gitignore
src/: __init__.py  main.py
src/assets/: __init__.py  asset_manager.py  sprite_loader.py  thumbnail_cache.py
src/core/: __init__.py  app.py  config.py  constants.py  events.py  types.py
src/editor/: __init__.py  editor_window.py  history.py  selection.py  tool_manager.py
src/editor/panels/: __init__.py  assets_browser.py  hierarchy.py  inspector.py  layer_panel.py  tile_palette.py  toolbar.py
src/rendering/: __init__.py  camera.py  gizmos.py  grid_renderer.py  renderer.py
src/scene/: __init__.py  entity.py  layer.py  scene.py  scene_serializer.py  tilemap.py
src/tools/: __init__.py  base_tool.py  brush_tool.py  entity_placer.py  eraser_tool.py  fill_tool.py  move_tool.py  select_tool.py
src/ui/: __init__.py  theme.py  widgets.py
src/utils/: __init__.py  color.py  file_dialog.py  file_utils.py  logging.py  math.py  rect.py
tests/: test_asset_manager.py  test_color.py  test_history.py  test_math.py  test_panels.py  test_scene.py  test_scene_serializer.py  test_serializer.py  test_thumbnail_cache.py
