[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2d-game-editor"
version = "0.1.0"
description = "A 2D game editor for creating and managing game scenes."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0",
    "numpy>=1.20",
    "Pillow>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "mypy>=0.900"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--import-mode=importlib"
testpaths = ["tests"]
